The user listing table is desinged.

--- a/jsonplaceholder-api/app-ui/Base.lproj/Main.storyboard
+++ b/jsonplaceholder-api/app-ui/Base.lproj/Main.storyboard
@@ -1,24 +1,152 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="vvT-dN-Ur3">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Navigation Controller-->
+        <scene sceneID="Vfz-zg-7ev">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="vvT-dN-Ur3" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="G1H-aM-Hb7">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" systemColor="systemGreenColor"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" systemColor="systemBackgroundColor"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="u8u-FE-PAk"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xa3-FA-LEr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="94.419642857142847"/>
+        </scene>
+        <!--Prueba de Ingreso-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="jsonplaceholder_api" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" placeholder="Buscar usuario" translatesAutoresizingMaskIntoConstraints="NO" id="5Ii-FK-h6B">
+                                <rect key="frame" x="0.0" y="88" width="414" height="51"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="110" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="0ft-gh-Bpf">
+                                <rect key="frame" x="0.0" y="139" width="414" height="723"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="wJt-CH-4Ld">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="110"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="wJt-CH-4Ld" id="FZl-TS-xJE">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="110"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Leonardo Martes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4yE-3V-4rx">
+                                                    <rect key="frame" x="20" y="11" width="374" height="23"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
+                                                    <color key="textColor" systemColor="systemGreenColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="phone.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="ECS-TT-BWW">
+                                                    <rect key="frame" x="20" y="35.5" width="20" height="17.5"/>
+                                                    <color key="tintColor" systemColor="systemGreenColor"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="20" id="evm-1x-Z6m"/>
+                                                        <constraint firstAttribute="height" constant="20" id="jjg-44-jFR"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="304 533 8263" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VaN-MZ-OJ3">
+                                                    <rect key="frame" x="45" y="36" width="349" height="16"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mail.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="qA5-rG-Bry">
+                                                    <rect key="frame" x="20" y="55" width="20" height="17.5"/>
+                                                    <color key="tintColor" systemColor="systemGreenColor"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="20" id="Byx-tC-ZbS"/>
+                                                        <constraint firstAttribute="width" constant="20" id="ZjF-BC-GAR"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="leonardomartes.1997@gmail.com" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n47-Rh-oCJ">
+                                                    <rect key="frame" x="45" y="55" width="349" height="16"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="VER PUBLICACIONES" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yiY-ai-jVb">
+                                                    <rect key="frame" x="272" y="84" width="122" height="15"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                                                    <color key="textColor" systemColor="systemGreenColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailingMargin" secondItem="n47-Rh-oCJ" secondAttribute="trailing" id="187-CB-D7y"/>
+                                                <constraint firstItem="4yE-3V-4rx" firstAttribute="top" secondItem="FZl-TS-xJE" secondAttribute="topMargin" id="3SF-f2-bK8"/>
+                                                <constraint firstItem="qA5-rG-Bry" firstAttribute="leading" secondItem="FZl-TS-xJE" secondAttribute="leadingMargin" id="6lm-5Y-G1b"/>
+                                                <constraint firstItem="n47-Rh-oCJ" firstAttribute="leading" secondItem="qA5-rG-Bry" secondAttribute="trailing" constant="5" id="8Nq-ms-sev"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="VaN-MZ-OJ3" secondAttribute="trailing" id="9W9-QL-xSa"/>
+                                                <constraint firstItem="VaN-MZ-OJ3" firstAttribute="leading" secondItem="ECS-TT-BWW" secondAttribute="trailing" constant="5" id="DBc-4W-Rmv"/>
+                                                <constraint firstItem="yiY-ai-jVb" firstAttribute="bottom" secondItem="FZl-TS-xJE" secondAttribute="bottomMargin" id="ERf-jC-6vq"/>
+                                                <constraint firstItem="ECS-TT-BWW" firstAttribute="leading" secondItem="FZl-TS-xJE" secondAttribute="leadingMargin" id="GnM-IK-I5Z"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="4yE-3V-4rx" secondAttribute="trailing" id="W5C-ru-Dm2"/>
+                                                <constraint firstItem="yiY-ai-jVb" firstAttribute="trailing" secondItem="FZl-TS-xJE" secondAttribute="trailingMargin" id="XTE-9g-2GU"/>
+                                                <constraint firstItem="qA5-rG-Bry" firstAttribute="top" secondItem="ECS-TT-BWW" secondAttribute="bottom" id="XpM-DE-EJJ"/>
+                                                <constraint firstItem="n47-Rh-oCJ" firstAttribute="top" secondItem="VaN-MZ-OJ3" secondAttribute="bottom" constant="3" id="bup-03-V7m"/>
+                                                <constraint firstItem="4yE-3V-4rx" firstAttribute="leading" secondItem="FZl-TS-xJE" secondAttribute="leadingMargin" id="cnF-go-RQd"/>
+                                                <constraint firstItem="ECS-TT-BWW" firstAttribute="top" secondItem="4yE-3V-4rx" secondAttribute="bottom" id="gTY-sn-oEH"/>
+                                                <constraint firstItem="VaN-MZ-OJ3" firstAttribute="top" secondItem="4yE-3V-4rx" secondAttribute="bottom" constant="2" id="peh-zA-s9f"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="5Ii-FK-h6B" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="FcV-7e-f1x"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="0ft-gh-Bpf" secondAttribute="bottom" id="cq9-yj-jXj"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="0ft-gh-Bpf" secondAttribute="trailing" id="lSy-Zk-5Qf"/>
+                            <constraint firstItem="0ft-gh-Bpf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="lwE-7H-IbU"/>
+                            <constraint firstItem="5Ii-FK-h6B" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="mEJ-PW-R9D"/>
+                            <constraint firstItem="5Ii-FK-h6B" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="ydt-hB-AbP"/>
+                            <constraint firstItem="0ft-gh-Bpf" firstAttribute="top" secondItem="5Ii-FK-h6B" secondAttribute="bottom" id="yry-YQ-34y"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Prueba de Ingreso" id="Az1-Mk-hR1">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="gP0-gR-gPu">
+                            <color key="tintColor" systemColor="systemBackgroundColor"/>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1047.8260869565217" y="94.419642857142847"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="mail.fill" catalog="system" width="128" height="93"/>
+        <image name="phone.fill" catalog="system" width="128" height="114"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
