--- a/jsonplaceholder-api/app-ui/Base.lproj/Main.storyboard
+++ b/jsonplaceholder-api/app-ui/Base.lproj/Main.storyboard
@@ -33,7 +33,7 @@
         <!--Prueba de Ingreso-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="jsonplaceholder_api" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="UserListViewController" customModule="jsonplaceholder_api" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -42,15 +42,15 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="51"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="110" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="0ft-gh-Bpf">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="130" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="0ft-gh-Bpf">
                                 <rect key="frame" x="0.0" y="139" width="414" height="723"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="wJt-CH-4Ld">
-                                        <rect key="frame" x="0.0" y="44.5" width="414" height="110"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="UserListCellIdentifier" id="wJt-CH-4Ld" customClass="UserListTableViewCell" customModule="jsonplaceholder_api" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="130"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="wJt-CH-4Ld" id="FZl-TS-xJE">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="110"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="130"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Leonardo Martes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4yE-3V-4rx">
@@ -74,7 +74,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mail.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="qA5-rG-Bry">
-                                                    <rect key="frame" x="20" y="55" width="20" height="17.5"/>
+                                                    <rect key="frame" x="20" y="59" width="20" height="17.5"/>
                                                     <color key="tintColor" systemColor="systemGreenColor"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="20" id="Byx-tC-ZbS"/>
@@ -88,7 +88,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="VER PUBLICACIONES" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yiY-ai-jVb">
-                                                    <rect key="frame" x="272" y="84" width="122" height="15"/>
+                                                    <rect key="frame" x="272" y="104" width="122" height="15"/>
                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                                                     <color key="textColor" systemColor="systemGreenColor"/>
                                                     <nil key="highlightedColor"/>
@@ -105,13 +105,19 @@
                                                 <constraint firstItem="ECS-TT-BWW" firstAttribute="leading" secondItem="FZl-TS-xJE" secondAttribute="leadingMargin" id="GnM-IK-I5Z"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="4yE-3V-4rx" secondAttribute="trailing" id="W5C-ru-Dm2"/>
                                                 <constraint firstItem="yiY-ai-jVb" firstAttribute="trailing" secondItem="FZl-TS-xJE" secondAttribute="trailingMargin" id="XTE-9g-2GU"/>
-                                                <constraint firstItem="qA5-rG-Bry" firstAttribute="top" secondItem="ECS-TT-BWW" secondAttribute="bottom" id="XpM-DE-EJJ"/>
+                                                <constraint firstItem="qA5-rG-Bry" firstAttribute="top" secondItem="ECS-TT-BWW" secondAttribute="bottom" constant="4" id="XpM-DE-EJJ"/>
+                                                <constraint firstItem="yiY-ai-jVb" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="FZl-TS-xJE" secondAttribute="leading" constant="20" symbolic="YES" id="aU6-fa-ddr"/>
                                                 <constraint firstItem="n47-Rh-oCJ" firstAttribute="top" secondItem="VaN-MZ-OJ3" secondAttribute="bottom" constant="3" id="bup-03-V7m"/>
                                                 <constraint firstItem="4yE-3V-4rx" firstAttribute="leading" secondItem="FZl-TS-xJE" secondAttribute="leadingMargin" id="cnF-go-RQd"/>
                                                 <constraint firstItem="ECS-TT-BWW" firstAttribute="top" secondItem="4yE-3V-4rx" secondAttribute="bottom" id="gTY-sn-oEH"/>
                                                 <constraint firstItem="VaN-MZ-OJ3" firstAttribute="top" secondItem="4yE-3V-4rx" secondAttribute="bottom" constant="2" id="peh-zA-s9f"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="email" destination="n47-Rh-oCJ" id="RoT-dF-V6y"/>
+                                            <outlet property="name" destination="4yE-3V-4rx" id="ccg-qg-PeE"/>
+                                            <outlet property="phone" destination="VaN-MZ-OJ3" id="hBd-vo-DrW"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -133,6 +139,10 @@
                             <color key="tintColor" systemColor="systemBackgroundColor"/>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="searchBar" destination="5Ii-FK-h6B" id="6ZK-m2-Iuj"/>
+                        <outlet property="tableView" destination="0ft-gh-Bpf" id="3fd-91-8cC"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
